--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <h1>Probando git</h1>
-  <body></body>
+  <body>
+    <h1>Prueba en git</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit facilis
+      exercitationem doloremque? Aliquid, cupiditate saepe. Placeat aperiam
+      alias maxime velit necessitatibus, consequatur voluptatum. Reprehenderit
+      illo autem expedita delectus quos accusantium?
+    </p>
+  </body>
 </html>
